doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
D:\greenfoot\lib\greenfoot.jar;D:\greenfoot\lib\bluejcore.jar;D:\greenfoot\lib\bluejeditor.jar;D:\greenfoot\lib\bluejext2.jar;D:\greenfoot\lib\junit-jupiter-5.5.2.jar;D:\greenfoot\lib\junit-jupiter-api-5.5.2.jar;D:\greenfoot\lib\junit-jupiter-engine-5.5.2.jar;D:\greenfoot\lib\junit-jupiter-migrationsupport-5.5.2.jar;D:\greenfoot\lib\junit-jupiter-params-5.5.2.jar;D:\greenfoot\lib\junit-platform-commons-1.5.2.jar;D:\greenfoot\lib\junit-platform-console-1.5.2.jar;D:\greenfoot\lib\junit-platform-console-standalone-1.5.2.jar;D:\greenfoot\lib\junit-platform-engine-1.5.2.jar;D:\greenfoot\lib\junit-platform-launcher-1.5.2.jar;D:\greenfoot\lib\junit-platform-reporting-1.5.2.jar;D:\greenfoot\lib\junit-platform-runner-1.5.2.jar;D:\greenfoot\lib\junit-platform-suite-api-1.5.2.jar;D:\greenfoot\lib\junit-platform-testkit-1.5.2.jar;D:\greenfoot\lib\junit-quickcheck-core-0.9.jar;D:\greenfoot\lib\junit-vintage-engine-5.5.2.jar;D:\greenfoot\lib\hamcrest-core-1.3.jar;D:\greenfoot\lib\bluej.jar;D:\greenfoot\lib\classgraph-4.8.90.jar;D:\greenfoot\lib\diffutils-1.2.1.jar;D:\greenfoot\lib\commons-logging-api-1.1.2.jar;D:\greenfoot\lib\jl1.0.1.jar;D:\greenfoot\lib\opencsv-2.3.jar;D:\greenfoot\lib\xom-1.2.9.jar;D:\greenfoot\lib\lang-stride.jar;D:\greenfoot\lib\nsmenufx-2.1.8.jar;D:\greenfoot\lib\richtextfx-fat-0.9.0.jar;D:\greenfoot\lib\guava-17.0.jar;D:\greenfoot\lib\httpclient-4.1.1.jar;D:\greenfoot\lib\httpcore-4.1.jar;D:\greenfoot\lib\httpmime-4.1.1.jar;D:\greenfoot\lib\javafx\lib\javafx.base.jar;D:\greenfoot\lib\javafx\lib\javafx.controls.jar;D:\greenfoot\lib\javafx\lib\javafx.fxml.jar;D:\greenfoot\lib\javafx\lib\javafx.graphics.jar;D:\greenfoot\lib\javafx\lib\javafx.media.jar;D:\greenfoot\lib\javafx\lib\javafx.properties.jar;D:\greenfoot\lib\javafx\lib\javafx.swing.jar;D:\greenfoot\lib\javafx\lib\javafx.web.jar;D:\games project\Racing project
-d
D:\games project\Racing project\doc
-encoding
UTF-8
-charset
UTF-8
D:\games project\Racing project\enemy.java
<---- end of javadoc command ---->
Loading source file D:\games project\Racing project\enemy.java...
D:\games project\Racing project\enemy.java:20: error: illegal start of expression
    }
    ^
1 error
